feat!: BREAKING CHANGE - added max files limit